no se actualiza el css en mi servidor local ptm

--- a/TarjetitasEnBulce.html
+++ b/TarjetitasEnBulce.html
@@ -20,7 +20,7 @@
                 <div class="Contenedor_FlipCards">
                     <div class="Flipcard">
                         <div class="Flipcard__face Flipcard__face--front">
-                            <p>Diferentes Estilos de programación</p>
+                            <p>1.1 Diferentes Estilos de programación</p>
                         </div>
                         <div class="Flipcard__face Flipcard__face--back">
                             <div id="buttons-container-1"></div>
@@ -29,10 +29,46 @@
 
                     <div class="Flipcard">
                         <div class="Flipcard__face Flipcard__face--front">
-                            <p>Analizando diferentes estilos de programación</p>
+                            <p>1.2 Analizando diferentes estilos de programación</p>
                         </div>
                         <div class="Flipcard__face Flipcard__face--back">
                             <div id="buttons-container-2"></div>
+                        </div>
+                    </div>
+
+                    <div class="Flipcard">
+                        <div class="Flipcard__face Flipcard__face--front">
+                            <p>1.2.1 Evaluación de expresiones</p>
+                        </div>
+                        <div class="Flipcard__face Flipcard__face--back">
+                            <div id="buttons-container-3"></div>
+                        </div>
+                    </div>
+
+                    <div class="Flipcard">
+                        <div class="Flipcard__face Flipcard__face--front">
+                            <p>1.2.2 Tipos de datos</p>
+                        </div>
+                        <div class="Flipcard__face Flipcard__face--back">
+                            <div id="buttons-container-4"></div>
+                        </div>
+                    </div>
+
+                    <div class="Flipcard">
+                        <div class="Flipcard__face Flipcard__face--front">
+                            <p>1.2.3 Disciplina tipos</p>
+                        </div>
+                        <div class="Flipcard__face Flipcard__face--back">
+                            <div id="buttons-container-5"></div>
+                        </div>
+                    </div>
+
+                    <div class="Flipcard">
+                        <div class="Flipcard__face Flipcard__face--front">
+                            <p>1.2.4 Funciones</p>
+                        </div>
+                        <div class="Flipcard__face Flipcard__face--back">
+                            <div id="buttons-container-6"></div>
                         </div>
                     </div>
                 </div>
@@ -69,7 +105,11 @@
         // Define los subtemas y sus contenedores
         const subtemas = [
             { subtema: "Diferentes Estilos de programación", containerId: "buttons-container-1" },
-            { subtema: "Analizando diferentes estilos de programación", containerId: "buttons-container-2" }
+            { subtema: "Analizando diferentes estilos de programación", containerId: "buttons-container-2" },
+            { subtema: "Evaluación de expresiones", containerId: "buttons-container-3" },
+            { subtema: "Tipos de datos", containerId: "buttons-container-4" },
+            { subtema: "Disciplina tipos", containerId: "buttons-container-5" },
+            { subtema: "Funciones", containerId: "buttons-container-6" }
         ];
 
         // Función para cargar los datos de un subtema
