--- a/TarjetitasEnBulce.html
+++ b/TarjetitasEnBulce.html
@@ -12,7 +12,7 @@
     <header class="p-3 fixed-top">
         <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
             <div class="mb-2 mb-md-0">
-                <h1 class="h5 m-0" style="color: white; font-size:x-large;">Temas del semestre</h1>
+                <h1 style="color: white; font-size:x-large; font-family: 'Lucida Sans';">Temas del semestre</h1>
             </div>       
 
             <div class="d-flex header-buttons">
